Run OpenRewrite and apply all refactorings