@@ -2,12 +2,12 @@ package io.jenkins.plugins.metrics.extension;
 
 import org.apache.commons.lang3.ArrayUtils;
 
-import edu.hm.hafner.analysis.Issue;
 import edu.hm.hafner.analysis.Report;
 import edu.hm.hafner.analysis.Severity;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map.Entry;
 import java.util.stream.Collectors;
 
 import hudson.Extension;
@@ -15,7 +15,6 @@ import hudson.model.Run;
 
 import io.jenkins.plugins.analysis.core.model.AnalysisResult;
 import io.jenkins.plugins.analysis.core.model.ResultAction;
-import io.jenkins.plugins.forensics.miner.FileStatistics;
 import io.jenkins.plugins.forensics.miner.RepositoryStatistics;
 import io.jenkins.plugins.metrics.model.measurement.ClassMetricsMeasurement;
 import io.jenkins.plugins.metrics.model.measurement.MetricsMeasurement;
@@ -70,11 +69,11 @@ public class WarningsMetricsProviderFactory extends MetricsProviderFactory {
 
     @Override
     public MetricsProvider getFor(final Run<?, ?> build) {
-        MetricsProvider provider = new MetricsProvider();
+        var provider = new MetricsProvider();
         provider.setOrigin("warnings-ng-plugin");
 
         var actions = build.getActions(ResultAction.class);
-        RepositoryStatistics stats = actions.stream()
+        var stats = actions.stream()
                 .map(ResultAction::getResult)
                 .map(AnalysisResult::getForensics)
                 .reduce(new RepositoryStatistics(), (acc, r) -> {
@@ -82,13 +81,13 @@ public class WarningsMetricsProviderFactory extends MetricsProviderFactory {
                     return acc;
                 });
 
-        Report allIssues = actions.stream()
+        var allIssues = actions.stream()
                 .map(ResultAction::getResult)
                 .map(AnalysisResult::getIssues)
                 .reduce(new Report(), Report::addAll);
 
-        provider.addProjectSummaryEntry(String.format("%d Errors", allIssues.getSizeOf(Severity.ERROR)));
-        provider.addProjectSummaryEntry(String.format("%d Warnings (%d high, %d normal, %d low)",
+        provider.addProjectSummaryEntry("%d Errors".formatted(allIssues.getSizeOf(Severity.ERROR)));
+        provider.addProjectSummaryEntry("%d Warnings (%d high, %d normal, %d low)".formatted(
                 allIssues.getSizeOf(Severity.WARNING_HIGH)
                         + allIssues.getSizeOf(Severity.WARNING_NORMAL)
                         + allIssues.getSizeOf(Severity.WARNING_LOW),
@@ -99,33 +98,36 @@ public class WarningsMetricsProviderFactory extends MetricsProviderFactory {
         List<MetricsMeasurement> metricsMeasurements = allIssues
                 .groupByProperty("fileName")
                 .entrySet().stream()
-                .map(entry -> {
-                    ClassMetricsMeasurement measurement = new ClassMetricsMeasurement();
-                    Report report = entry.getValue();
-                    measurement.setFileName(entry.getKey());
-
-                    Issue first = report.get(0);
-                    measurement.setPackageName(first.getPackageName());
-                    measurement.setClassName(first.getBaseName().replace(".java", ""));
-
-                    measurement.addMetric(new IntegerMetric(ERRORS, report.getSizeOf(Severity.ERROR)));
-                    measurement.addMetric(new IntegerMetric(WARNINGS_HIGH, report.getSizeOf(Severity.WARNING_HIGH)));
-                    measurement.addMetric(new IntegerMetric(WARNINGS_NORMAL,
-                            report.getSizeOf(Severity.WARNING_NORMAL)));
-                    measurement.addMetric(new IntegerMetric(WARNINGS_LOW, report.getSizeOf(Severity.WARNING_LOW)));
-
-                    if (stats.contains(entry.getKey())) {
-                        FileStatistics fileStatistics = stats.get(entry.getKey());
-                        measurement.addMetric(new IntegerMetric(AUTHORS, fileStatistics.getNumberOfAuthors()));
-                        measurement.addMetric(new IntegerMetric(COMMITS, fileStatistics.getNumberOfCommits()));
-                    }
-
-                    return measurement;
-                })
+                .map(entry -> createMetric(entry, stats))
                 .collect(Collectors.toList());
 
         provider.setMetricsMeasurements(metricsMeasurements);
         return provider;
+    }
+
+    private ClassMetricsMeasurement createMetric(final Entry<String, Report> entry,
+            final RepositoryStatistics stats) {
+        var measurement = new ClassMetricsMeasurement();
+        var report = entry.getValue();
+        measurement.setFileName(entry.getKey());
+
+        var first = report.get(0);
+        measurement.setPackageName(first.getPackageName());
+        measurement.setClassName(first.getBaseName().replace(".java", ""));
+
+        measurement.addMetric(new IntegerMetric(ERRORS, report.getSizeOf(Severity.ERROR)));
+        measurement.addMetric(new IntegerMetric(WARNINGS_HIGH, report.getSizeOf(Severity.WARNING_HIGH)));
+        measurement.addMetric(new IntegerMetric(WARNINGS_NORMAL,
+                report.getSizeOf(Severity.WARNING_NORMAL)));
+        measurement.addMetric(new IntegerMetric(WARNINGS_LOW, report.getSizeOf(Severity.WARNING_LOW)));
+
+        if (stats.contains(entry.getKey())) {
+            var fileStatistics = stats.get(entry.getKey());
+            measurement.addMetric(new IntegerMetric(AUTHORS, fileStatistics.getNumberOfAuthors()));
+            measurement.addMetric(new IntegerMetric(COMMITS, fileStatistics.getNumberOfCommits()));
+        }
+
+        return measurement;
     }
 
     @Override
